Updated resume link

--- a/index.html
+++ b/index.html
@@ -71,11 +71,11 @@
         <div class="hero-bg"></div>
 
         <div class="hero-content">
-            <h2 class="hero-subtitle margin">Hi, Myself</h2>
+            <h2 class="hero-subtitle margin">Hi, I'm</h2>
             <h1 class="hero-title">Muskan Gupta</h1>
-            <h2 class="hero-subtitle">And I'm an Aspiring Frontend Developer</h2>
+            <h2 class="hero-subtitle">And I'm a Frontend Developer</h2>
             <p class="hero-description">Crafting intuitive interfaces that make the web both beautiful and functional, I transform concepts into engaging, user-first digital experiences.</p>
-            <a href="https://drive.google.com/uc?export=download&id=1NgHIBHulfoetmZtLyps4SWIincdUpQWM" class="cta-button" download>Download CV <i class="fa-solid fa-cloud-arrow-down"></i></a>
+            <a href="https://drive.google.com/uc?export=download&id=1BQtAslcH3Z1GBsifWKaxAlf35LWCk40q" class="cta-button" download>Download CV <i class="fa-solid fa-cloud-arrow-down"></i></a>
         </div>
 
         <img class="hero-img" src="images/gibbyProfile2.png" alt="profile-img">
@@ -97,8 +97,21 @@
                     </div>
                     <div class="about-details">
                         <div class="about-info">
-                            <h4 class="iam">I'm an Aspiring Web Developer And Frontend Engineer</h4>
-                            <p class="about-description">From the historic charm of Agra, the City of Taj, I've journeyed into the ever-evolving world of the web. As a final-year B.Tech student at Galgotias College of Engineering and Technology, I specialize in crafting seamless, visually captivating front-end experiences. In the past, I led a fashion society as its Club Head, blending creativity with leadership — a combination that still shapes my approach to design. My short-term goal is to sharpen my skills in modern front-end technologies and dive deeper into the art of web design, while my long-term vision is to grow into a full-stack developer, building innovative digital solutions that balance functionality with aesthetics.</p>
+                            <h4 class="iam">I'm a Web Developer And Frontend Engineer</h4>
+                            <p class="about-description">I'm a final-year <strong>B.Tech student</strong> at Galgotias College of 
+                            Engineering and Technology, specializing in modern frontend development. 
+                            Through <strong>internships, 5+ projects, and 150+ LeetCode problems</strong>, 
+                            I've built strong skills in creating scalable, visually engaging applications.
+                            </p>
+                            <p class="about-description">Along with frontend expertise, I've strengthened my <strong>software engineering fundamentals</strong> through problem-solving and hands-on project work, enabling me to write clean, efficient, and 
+                            maintainable code.
+                            </p>
+                            <p class="about-description">My leadership experience as a Fashion Society Club Head sharpened my 
+                            creativity and collaboration skills, which I now apply to building 
+                            <strong>clean, user-first digital solutions</strong>. Currently, I'm expanding 
+                            my expertise in frontend frameworks with a vision to grow into a 
+                            <strong>full-stack developer</strong>.
+                            </p>
                         </div>
                         <div class="pro-list">
                             <div class="pro-card">
@@ -118,7 +131,7 @@
                             <a href="#home" class="cta-button">Hire Me   <i class="fa-solid fa-person-walking-dashed-line-arrow-right"></i>
                             </a>
 
-                            <a href="https://drive.google.com/uc?export=download&id=1NgHIBHulfoetmZtLyps4SWIincdUpQWM" class="cta-button" download>Download CV <i class="fa-solid fa-cloud-arrow-down"></i></a>
+                            <a href="https://drive.google.com/uc?export=download&id=1BQtAslcH3Z1GBsifWKaxAlf35LWCk40q" class="cta-button" download>Download CV <i class="fa-solid fa-cloud-arrow-down"></i></a>
                         </div>
                     </div>
                 </div>
